GNOME Bugzilla – Bug 356329
'Save Attachments' saves only one of multiple attachments
Last modified: 2006-12-04 19:39:03 UTC
Please describe the problem: [pan 0.112] When I try to save attachments from a post with two jpg's attached, only the first one is saved. Example from alt.binaries.pictures.animals: MID 4d9mg21jjp6cqji3kegeohhbfofd920ddk@4ax.com (Very funny picture, BTW). Steps to reproduce: 1. 2. 3. Actual results: Expected results: Does this happen every time? Other information:
[0.115] Regression: now when I try to save multiple attachments, the saved file carries the name of the article Subject rather than the name of the first attachment. (As before, only the first of multiple attachments is saved.) This is quite a serious bug, IMO, and should be fixed before RC1. Here is another example in alt.binaries.pictures.animals from Oct 2: <452099b0$0$49834$892e0abb@auth.newsreader.octanews.com> In this example, pan won't display the attached jpegs in the body pane, I suppose because the article is over the size limit(?) Thanks, Charles!
I am seeing this same bug. If I have a post with multiple attachments, as soon as I click in the post, I get the save dialog and only the first attachment is saved. I can never see any text that is also included in the post. It is marked as read, but each time it brings up the dialog box and re-saves on attachment. George Sherwood
It seems to be fixed in the latest 0.117. George, what version are you using? On the other hand, pan still insists on saving the attachments rather than displaying them in the body pane. This makes it impossible to know whether I want to save them or not, because I can't see them! I'm not sure if this is due to the size of the attachments, or possibly some other regression, but it would be great to get it fixed before 1.0.
Walt, I am using 0.117 and still seeing this issue. Not sure if I need to delete the .pan2 directory or something in my config that is making the difference.
0.119: this issue still exists. I vote for fixing this one before 1.0. Otherwise, 0.119 has been working fine for me.
(In reply to comment #5) > 0.119: this issue still exists. I vote for fixing this one before 1.0. I'm still not seeing this problem any longer. Can you point me to a very recent post I can download -- or (even better) make a test post yourself that demonstrates the problem.
Interesting ... I tried posting a message with multiple attachments using Knode; Pan had no problem with it. After some searching, I was able to find another post that demonstrates this problem: alt.binaries.test: Message-ID: <hard-7C2294.15320211112006@news.privacy.li> Here are all of the headers: Path: be10.phx!hwmnpeer02.phx!hwmnpeer01.phx!news.highwinds-media.com!newsfeed.news2me.com!transit3.readnews.com!news-out.readnews.com!news-xxxfer.readnews.com!news-out.readnews.com!spool-big2.readnews.com!newspump.sol.net!10.218.45.203.MISMATCH!newsfeeds.sol.net!nx01.iad01.newshosting.com!newshosting.com!post01.iad01!news.privacy.li!not-for-mail From: butters <hard@work.com> Newsgroups: alt.binaries.test User-Agent: MT-NewsWatcher/3.5.1 (Intel Mac OS X) Subject: dog costumes - attached files (1/2) Date: Sat, 11 Nov 2006 15:32:05 -0800 Message-ID: <hard-7C2294.15320211112006@news.privacy.li> Lines: 5000 Organization: Privacy.li- Anonymous news through SSH2-Tunnels, www.privacy.li X-Complaints-To: admin01@privacy.li Xref: Hurricane-Charley alt.binaries.test:41298560 X-Received-Date: Sat, 11 Nov 2006 16:32:45 MST (be10.phx) MIME-Version: 1.0 Content-Type: multipart/mixed When I saved the message text, two files were saved (the first with 5000 lines, the next with 860 lines).
(In reply to comment #7) > After some searching, I was able to find another post that demonstrates this > problem: <snip> > MIME-Version: 1.0 > Content-Type: multipart/mixed <snip> > When I saved the message text, two files were saved (the first with 5000 lines, > the next with 860 lines). Do you still have anything from your save? Sadly, my NSP expires a.b.test after only three days, so I missed that post. I'm thinking that the encoding method must be implicated somehow in this bug, but it's all just guesswork without a test case to analyze.
Created attachment 76854 [details] saved text 1 of 2 This is piece 1 of 2 of Message-ID: <hard-7C2294.15320211112006@news.privacy.li> in a.b.test
Created attachment 76855 [details] text piece 2 of 2 This is piece 2 of 2 of Message-ID: <hard-7C2294.15320211112006@news.privacy.li> in a.b.test
I used the freestanding uudeview application to decode the images in your attachments with no problems, so I am hoping Charles can puzzle out what went wrong when pan attempted to do likewise. Just a thought: my mozilla/thunderbird mail-news program allows me to select whether I want to send attachments as 'attachments' or as 'inline'. I confess I don't understand the difference between these two choices. Maybe Charles (anyone?) could make this distinction clear for us? Could this possibly be the reason behind this bug report? Thanks!
Here's another example of a message with two attachments, only one of which is saved: alt.binaries.images.fun Message-ID: <NC4ah.22328$r6.18991@bignews1.bellsouth.net> NNTP-Posting-Date: Sat, 25 Nov 2006 18:47:57 EST
Good work, Brian! Both jpegs display in the body pane, but only the first attachment is saved. Saving the entire post as 'text' works correctly, however. Here is the spot in the post where the error occurs, and I'm hoping the problem will be obvious to Charles: ------------------------------------------------------------------- M'CO6DF?L^UE (Y%5[<CYQV'>A 4EA\O]X@^;WI9F#D' ![U/-+Y>X< &JRE9 '6 4\U0C_V0`` ` end begin 666 ! image0022.jpg M_]C_X `02D9)1@`!`0$`2 !(``#_X15L17AI9@``24DJ``@````+``X!`@`@ ------------------------------------------------------------------- Charles, the attachment-saving routine clearly quits after the word 'end', but why it doesn't happen with every post is the part I don't understand. Anyway, this is definitely a real bug.
Solved! Line 330 in task-article.cc is the problem: UUSetOption (UUOPT_FAST, 1, NULL); // yes, each input file is exactly one newsgroup posting That assumption turns out to be wrong: the input file may have more than one part, and we want to decode/save all of them. Just delete or comment out that one line and all is well.
Thanks Walt!