Bug 356329 – 'Save Attachments' saves only one of multiple attachments http://bugzilla.gnome.org/show_bug.cgi?id=356329